# Gram-Sathi

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  Gram_Sathi_Hackathon_Submission.pptx  IMPLEMENTATION_PLAN.md  README.md  deploy.sh  docker-compose.yml  livekit.yaml  pyproject.toml  requirements.md  sip-config.yaml  start.sh  test_sarvam.py
archive/: API_KEYS.md
docs/: architecture.drawio  callback-flow.drawio  demo-script.md  deployment.md  design.md  missed-call-flow.drawio  requirements.md  sequence-diagram.md  sip-setup.md
docs/architecture/: architecture.mmd
docs/plans/: 2026-02-28-dashboard-design.md  2026-03-02-fastrtc-pipeline-design.md  2026-03-02-fastrtc-pipeline-plan.md  2026-03-02-natural-soft-phone-design.md  2026-03-03-context-aware-fillers-weather.md  2026-03-03-farmer-onboarding-design.md  2026-03-03-farmer-onboarding-plan.md  2026-03-04-livekit-llama-migration-design.md  2026-03-04-livekit-llama-migration-plan.md  2026-03-05-govt-scheme-eligibility-design.md  2026-03-05-govt-scheme-eligibility-plan.md  2026-03-05-terraform-infra-design.md  2026-03-05-terraform-infra-plan.md  2026-03-07-twilio-missed-call-sip-design.md  2026-03-07-twilio-missed-call-sip-plan.md
frontend/: Dockerfile  package-lock.json  package.json
impl/: 04-tools-apis.md  README.md
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: generate_fillers.py  record_test_fixtures.py
src/app/: cache.py  config.py  database.py  livekit_agent.py  main.py  prompts.py  sip_trunk.py
src/dashboard/: api.py  app.py  config.py  theme.py
(+117 files in other folders)
